MacViewsBrowser: Fix omnibox crash due to failed DCHECK.

Textfield::SetTextEditCommandForNextKeyEvent can be used to schedule a text
editing command to be executed on the next key press. However, Textfield
subclasses like OmniboxViewViews are currently oblivious to the scheduled text
edit command accounting. When a key press event is handled in
OmnboxViewViews::OnKeyPressed itself, the scheduled_text_edit_command_ property
in Textfield is not cleared, leading to a failed DCHECK when
Textfield::SetTextEditCommandForNextKeyEvent is invoked next.

This CL resolves the crash by prohibiting Textfield subclasses from overriding
OnKeyPressed/Released. This allows Textfield to handle the accounting related to
the scheduled text edit command. This necessiates moving all the
OmniboxViewViews::OnKeyPressed and OmniboxViewViews::OnKeyReleased logic to
OmniboxViewViews::HandleKeyEvent. A test is also added which fails on the
current master.

BUG=613948
TEST=Build with mac_views_browser=1. In the browser, go to the omnibox and type
a partial url such that there are atleast 2 autocomplete suggestions. Press
arrow down key twice. Ensure the browser does not crash.

Review-Url: https://codereview.chromium.org/2273263002
Cr-Commit-Position: refs/heads/master@{#415156}

Former-commit-id: f588a5a9734fec75adfd7815190d930f0ba13df4